@@ -8,6 +8,7 @@ Additions and changes:
 - DYN (lazy loader) is now rules completed. May be used in production
 - tests suites may be now run with default memory limit
 - 'extension not available' message is received by all PHPUnit test listeners
+- add a new PHPUnit test listener useful to know what reference is loaded and tested
 
 Bug fixes:
 - none
